--- a/bin/sheet.css
+++ b/bin/sheet.css
@@ -6,8 +6,25 @@ body {
 }
 
 /* hide the scrollbar */
-body::-webkit-scrollbar {
-  display: none;
+/* TODO: uncomment */
+/* body::-webkit-scrollbar { */
+/*   display: none; */
+/* } */
+
+table {
+  border: 2px solid black;
+  border-collapse: collapse;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+tr {
+  border: 1px solid black;
+}
+
+th {
+  background: snow;
 }
 
 #output {
