--- a/bin/sheet.css
+++ b/bin/sheet.css
@@ -7,9 +7,9 @@ body {
 
 /* hide the scrollbar */
 /* TODO: uncomment */
-/* body::-webkit-scrollbar { */
-/*   display: none; */
-/* } */
+body::-webkit-scrollbar {
+  display: none;
+}
 
 table {
   border: 2px solid black;
@@ -32,61 +32,24 @@ th {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
   position: absolute;
-  top: 0%;
-  left: 0%;
   z-index: -1;
+
+  background-image: url(img/backgrounds/old-paper-background-texture-12.jpg);
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  /* background-attachment: fixed; */
+  background-size: cover;
+  /* background-size: contain; */
+  /* background-size: 100% 100%; */
 }
 
-/* input { */
-/*   display: none; */
-/* } */
-
-#uploadbutton {
-  cursor: pointer;
-  padding: 6px 12px;
-  appearance: auto;
-  writing-mode: horizontal-tb !important;
-  font-style: ;
-  font-variant-ligatures: ;
-  font-variant-caps: ;
-  font-variant-numeric: ;
-  font-variant-east-asian: ;
-  font-weight: ;
-  font-stretch: ;
-  font-size: ;
-  font-family: ;
-  text-rendering: auto;
-  color: buttontext;
-  letter-spacing: normal;
-  word-spacing: normal;
-  line-height: normal;
-  text-transform: none;
-  text-indent: 0px;
-  text-shadow: none;
-  display: inline-block;
-  text-align: center;
-  align-items: flex-start;
-  box-sizing: border-box;
-  background-color: snow;
-  margin: 0em;
-  border-width: 2px;
-  border-style: outset;
-  border-color: buttonborder;
-  border-image: initial;
-}
-
-#loadbutton {
-  cursor: pointer;
-  position: relative;
-  padding: 7.5px 12px;
-  background-color: snow;
-}
-
-#drawbutton {
-  cursor: pointer;
-  position: relative;
-  padding: 7.5px 12px;
-  background-color: snow;
+/* .flag-mask { */
+img {
+  position: absolute;
+  left: 170px;
+  width: 90px;
+  -webkit-mask-image: linear-gradient(to right, black, transparent);
+  mask-image: linear-gradient(to right, black, transparent);
+  border: 1px solid black;
 }
