--- a/bin/sheet.css
+++ b/bin/sheet.css
@@ -35,7 +35,7 @@ body::-webkit-scrollbar {
   background-color: black;
 }
 
-img {
+.flag {
   position: absolute;
   -webkit-mask-image: linear-gradient(
     to right,
@@ -52,4 +52,10 @@ img {
     transparent
   );
   border: 1px solid black;
+}
+
+.composer {
+  position: absolute;
+  width: 50px;
+  height: 50px;
 }
